--- a/ShouldReadMe/package.json
+++ b/ShouldReadMe/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "grunt-contrib-watch": "^0.6.1",
     "grunt-cli": "^0.1.13",
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "connect-livereload": "^0.5.2",
+    "time-grunt": "^1.0.0",
+    "load-grunt-tasks": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
