--- a/ShouldReadMe/config.yml
+++ b/ShouldReadMe/config.yml
@@ -7,7 +7,7 @@ appname: "ShouldReadMe"
 
 # The default layout to use for your application (located in
 # views/layouts/main.tt)
-layout: "main"
+layout: "autohandler"
 
 # when the charset is set to UTF-8 Dancer2 will handle for you
 # all the magic of encoding and decoding. You should not care
