--- a/ShouldReadMe/package.json
+++ b/ShouldReadMe/package.json
@@ -17,7 +17,9 @@
     "time-grunt": "^1.0.0",
     "load-grunt-tasks": "^1.0.0",
     "concat": "^1.0.0",
-    "grunt-bower-concat": "^0.4.0"
+    "grunt-bower-concat": "^0.4.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "handlebars": "^2.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
