--- a/ShouldReadMe/package.json
+++ b/ShouldReadMe/package.json
@@ -19,7 +19,8 @@
     "concat": "^1.0.0",
     "grunt-bower-concat": "^0.4.0",
     "grunt-contrib-concat": "^0.5.0",
-    "handlebars": "^2.0.0"
+    "handlebars": "^2.0.0",
+    "grunt-contrib-handlebars": "^0.9.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
