--- a/ShouldReadMe/package.json
+++ b/ShouldReadMe/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-concat": "^0.5.0",
     "handlebars": "^2.0.0",
     "grunt-contrib-handlebars": "^0.9.1",
-    "grunt-contrib-copy": "^0.7.0"
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-jst": "^0.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
